[metadata]
name = bridgezero
version = 0.1.3
license = LICENCE.txt
description = BridgeZero.ai Reinforcement Learning Bridge Bidding
long_description = file: README.rst
author = Wojciech Peisert
author_email = wojtekp@sauron.pl
classifiers=

[project.urls]
"Homepage" = "https://github.com/wpeisert/BridgeZero"
"Bug Tracker" = "https://github.com/wpeisert/BridgeZero/issues"

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy
    bridgelib
    scipy

[options.packages.find]
where=src